gocore-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gocore-v1 #pod name
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gocore #label for deployment object
        version: v1 #version
    spec:
      containers:
      - name: gocore #name of container
        image: gcr.io/williamscj-istio-demos/istio-metrics-basics:v1 #gcr image
        imagePullPolicy: Always #IfNotPresent
        ports:
        - containerPort: 3001 #map to container listening port
