gocore-virtualservice-fault-abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gocore-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - gocore-gateway
  http:
  - fault:
      abort: #abort request
        percent: 50 #50% of requests get aborted
        httpStatus: 400 #return 400 error
    route:
    - destination:
        host: gocore-service
        subset: v1
