gocore-virtualservice-fault-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gocore-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - gocore-gateway
  http:
  - fault:
      delay: #set delay on request
        fixedDelay: 5s #set delay duration for 5 seconds
        percent: 100 #set delay 100% of requests
    route:
    - destination:
        host: gocore-service
        subset: v1
